--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:h2\:mem\:disney-exploratory-system}
+spring.datasource.username=${JDBC_DATABASE_USERNAME\:sa}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD\:}
+spring.datasource.dbcp2.max-wait-millis=30000
+spring.datasource.dbcp2.validation-query=SELECT 1
+spring.datasource.dbcp2.validation-query-timeout=30
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+springdoc.pathsToMatch=/api/**
