--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 springdoc.pathsToMatch=/api/**
+#
+# Security
+# Variable used for security signature
+jwt.secret = secret
+# Serial expiration time (12 hours) time in sec
+jwt.expiration = 43200
