--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ springdoc.pathsToMatch=/api/**
 jwt.secret = secret
 # Serial expiration time (12 hours) time in sec
 jwt.expiration = 43200
+#
+email.EXISTS_SENDGRID_API_KEY = false
