--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,24 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Apache Commons Lang: Provides classes for manipulating
+		String methods, numeric methods, object reflection,
+		concurrency, creation, and serialization. -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<!--  Starter for using Java Bean Validation with Hibernate Validator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+
 		<!-- Dependencies to implement spring security roles jwt -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
